--- a/toastmessage/src/main/res/layout/toast.xml
+++ b/toastmessage/src/main/res/layout/toast.xml
@@ -7,7 +7,6 @@
     android:layout_height="wrap_content"
     android:fitsSystemWindows="false"
     android:gravity="center"
-    android:orientation="horizontal"
     android:paddingStart="@dimen/dimen8"
     android:paddingTop="@dimen/dimen5"
     android:paddingEnd="@dimen/dimen8"
@@ -18,23 +17,27 @@
         android:id="@+id/icon"
         android:layout_width="@dimen/dimen24"
         android:layout_height="@dimen/dimen24"
-        android:layout_marginStart="@dimen/dimen4"
-        android:layout_marginLeft="@dimen/dimen4"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text"
+        app:layout_constraintEnd_toStartOf="@+id/text"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/app_name"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/icon"
-        app:layout_constraintEnd_toStartOf="@+id/icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/icon" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/icon"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/app_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
